fix align placeholder and text

--- a/src/styles/home-components/_login.scss
+++ b/src/styles/home-components/_login.scss
@@ -120,8 +120,8 @@
     }
 
     input {
-      padding: 20px 10px;
-      text-align: right;
+      // padding: 20px 10px;
+      // text-align: right;
       width: 100%;
       background-color: transparent;
       border-radius: 0.8rem;
